// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should render 0 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 0px; height: 100%;"></div>
</div>"
`;

exports[`horizontal > should render 5 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 500px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 0px; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 100px; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 200px; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 300px; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render 100 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 10000px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 0px; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 100px; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 200px; display: inline-flex;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 300px; display: inline-flex;">
      <div>3</div>
    </div>
  </div>
</div>"
`;

exports[`horizontal > should render component 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 300px; height: 100%;">
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 0px; display: inline-flex;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 100px; display: inline-flex;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 200px; display: inline-flex;">
      <div>2</div>
    </div>
  </div>
</div>"
`;

exports[`should change components 1`] = `
"<div style="overflow: auto;">
  <ul style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 250px;">
    <li style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;">
      <div>0</div>
    </li>
    <li style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;">
      <div>1</div>
    </li>
    <li style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;">
      <div>2</div>
    </li>
    <li style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;">
      <div>3</div>
    </li>
    <li style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;">
      <div>4</div>
    </li>
  </ul>
</div>"
`;

exports[`vertical > should render 0 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 0px;"></div>
</div>"
`;

exports[`vertical > should render 5 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 250px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;">
      <div>4</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render 100 children 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;">
      <div>2</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px;">
      <div>3</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px;">
      <div>4</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px;">
      <div>5</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px;">
      <div>6</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px;">
      <div>7</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px;">
      <div>8</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px;">
      <div>9</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px;">
      <div>10</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px;">
      <div>11</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px;">
      <div>12</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px;">
      <div>13</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px;">
      <div>14</div>
    </div>
  </div>
</div>"
`;

exports[`vertical > should render component 1`] = `
"<div style="overflow: auto;">
  <div style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 150px;">
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;">
      <div>0</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px;">
      <div>1</div>
    </div>
    <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px;">
      <div>2</div>
    </div>
  </div>
</div>"
`;
